# wave_tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
editor/: CMakeLists.txt
editor/src/: EditorLayer.cpp  EditorLayer.h  WaveformPanel.cpp  WaveformPanel.h  main.cpp
engine/: CMakeLists.txt
engine/src/: wtpch.h
engine/src/audio/: AudioClip.h  AudioFormat.h  AudioTrack.h
engine/src/audio/effects/: IAudioEffect.h
engine/src/core/: Application.cpp  Application.h  Base.h  Entrypoint.h  Event.h  EventBus.h  Layer.cpp  Layer.h  RenderLayer.cpp  RenderLayer.h  UUID.h  Window.cpp  Window.h
engine/src/import/: AudioImporter.cpp  AudioImporter.h  WavDecoder.cpp  WavDecoder.h
libs/: dr_flac.h  dr_mp3.h  dr_wav.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
